<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.belatrixsf.accessibilityexamples.SimpleFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/belatrix"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_belatrix"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:contentDescription="@string/name"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:contentDescription="@string/lastName"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailAddress"
                android:contentDescription="@string/emailAddress"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:contentDescription="@string/signup"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or"
                android:contentDescription="@string/or"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInFacebook"
                android:contentDescription="@string/signInFacebook"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInTwitter"
                android:contentDescription="@string/signInTwitter"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInGoogle"
                android:contentDescription="@string/signInGoogle"/>
    </LinearLayout>
</RelativeLayout>
